Add Todo-MVC Base CSS Style

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Studio Riot 1.0.0</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-   
+    <link rel="stylesheet" href="style.css">
   </head>
   <script type="html/todo" type="text/template"><li id="{id}"><div class="view"><input class="toggle" type="checkbox"><label>{name}</label><button class="destroy"/></div><input class="edit" value="{name}"></li></script>
   <body>
