--- a/index.html
+++ b/index.html
@@ -6,11 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
   </head>
-  <script type="html/todo" type="text/template"><li id="{id}"><div class="view"><input class="toggle" type="checkbox"><label>{name}</label><button class="destroy"/></div><input class="edit" value="{name}"></li></script>
+  <script type="html/todo" type="text/template">
+    <li id="{id}"><div class="view">
+      <input class="toggle" type="checkbox">
+      <label>{name}</label>
+      <button class="destroy"/>
+    </div>
+    <input class="edit" value="{name}"></li></script>
   <body>
     <h1>Studio Riot 1.0.0</h1>
+
+    <section id="todoapp">
+        <header id="header">
+          <h1>Elenco Todos</h1>
+          <label>TODO:</label>
+          <input id="new-todo" placeholder="Cosa ti serve?" autofocus>
+        </header>
+    </section>
+    
     <ul id="todo-list"></ul>
     <script src="riot.js"></script>
+    <script src="db.js"></script>
+    <script src="todo.js"></script>
     <script src="app.js"></script>
   </body>
 </html>
